fix nav bar overlapping site title

--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -71,9 +71,9 @@ $my-account-z-index: 10;
     img {
       max-height: 100%;
     }
-    @media (max-width: 1560px) AND (min-width: 1023px){
+    @media (max-width: 2200px) AND (min-width: 1023px){
       a{
-        font-size: 1.5vw;
+        font-size: 1.4vw;
       }
     }
     @media (max-width: 1023px){
